<resources>
    <string name="app_name">Android Language Practice</string>
    <string name="entry_view_picture_desc">Entry View Picture</string>
    <string name="enter_button_label">Enter</string>
    <string name="enter_button_desc">Says Enter</string>
    <string name="share_label">Share</string>
    <string name="home_message_label">Welcome! Please select a button below.</string>
    <string name="location_button_label">Location</string>
    <string name="start_button_label">Start</string>
    <string name="book_desc">drawing of a book</string>
    <string name="table_desc">drawing of a table</string>
    <string name="location_question_message">그 책은 어디에 있어요?</string>
    <string name="location_question_message_alt">그 책상은 어디에 있어요?</string>
    <string name="location_question_message_alt_2">그 책들은 어디에 있어요?</string>
    <string name="location_image_name_1">question_image_1</string>
    <string name="location_image_name_2">question_image_2</string>
    <string name="location_image_name_3">question_image_3</string>
    <string name="location_image_name_4">question_image_4</string>
    <string name="location_image_name_5">question_image_5</string>
    <string name="location_image_name_6">question_image_6</string>
    <string name="location_image_name_7">question_image_7</string>
    <string name="location_image_name_8">question_image_8</string>
    <string name="location_image_name_9">question_image_9</string>
    <string name="location_image_name_10">question_image_10</string>
    <string name="location_image_name_11">question_image_11</string>
    <string name="location_hint_1">on the desk</string>
    <string name="location_hint_2">under the desk</string>
    <string name="location_hint_3">in front of the desk</string>
    <string name="location_hint_4">behind the desk</string>
    <string name="location_hint_5">beside the desk</string>
    <string name="location_hint_6">left of the desk</string>
    <string name="location_hint_7">right of the desk</string>
    <string name="location_hint_8">in between the bag and the book</string>
    <string name="location_hint_9">in the middle of the desk</string>
    <string name="location_hint_10">inside the bag</string>
    <string name="location_hint_11">outside the bag</string>
    <string name="location_answer_1">책상 위에 책이 있어요</string>
    <string name="location_answer_2">책상 아래 책이 있어요</string>
    <string name="location_answer_3">책상 앞에 책이 있어요</string>
    <string name="location_answer_4">책상 뒤에 책이 있어요</string>
    <string name="location_answer_5">책상 옆에 책들이 있어요</string>
    <string name="location_answer_6">책상 왼쪽에 책이 있어요</string>
    <string name="location_answer_7">책상 오른쪽에 책이 있어요</string>
    <string name="location_answer_8">가방과 책이 사이에 책상 있어요</string>
    <string name="location_answer_9">책상 가운데에 책이 있어요</string>
    <string name="location_answer_10">가방 안에 책이 있어요</string>
    <string name="location_answer_11">가방 밖에 책이 있어요</string>
    <string name="answer_box">answer</string>
    <string name="hint_label">"answer"</string>
    <string name="submit_button_label">Submit</string>
    <string name="location_question_tag">question_image_1</string>
    <string name="location_answer_message_input"> You entered: %1$s! %n </string>
    <string name="location_answer_message_correct"> This was the correct answer. </string>
    <string name="location_answer_message_incorrect"> This was not the correct answer.%n The correct answer was:%n %1$s!%n </string>
    <string name="error_message_answer"> ERROR IN CALCULATING QUESTION ANSWER! </string>
    <string name="error_message_buttons"> ERROR IN DISPLAYING NUMBER QUESTION! </string>
    <string name="blank_display" />
    <string name="continue_label">Continue</string>
    <string name="finish_label">Finish</string>
    <string name="location_question_correct"> %1$d out of %2$d questions correctly answered. </string>
    <string name="location_answer_message_comparison_1"> \nThis was not the correct answer. \n </string>
    <string name="location_answer_message_comparison_2"> \nThe correct answer was:\n%1$s \n </string>
    <string name="days_question">무슨 요일이에요?</string>
    <string name="days_button_label">Days</string>
    <string name="days_hint">_요일</string>
    <string name="days_monday">월요일</string>
    <string name="days_monday_sentence">월요일이에요</string>
    <string name="days_monday_display">Monday</string>
    <string name="days_tuesday">화요일</string>
    <string name="days_tuesday_sentence">화요일이에요</string>
    <string name="days_tuesday_display">Tuesday</string>
    <string name="days_wednesday">수요일</string>
    <string name="days_wednesday_sentence">수요일이에요</string>
    <string name="days_wednesday_display">Wednesday</string>
    <string name="days_thursday">목요일</string>
    <string name="days_thursday_sentence">목요일이에요</string>
    <string name="days_thursday_display">Thursday</string>
    <string name="days_friday">금요일</string>
    <string name="days_friday_sentence">금요일이에요</string>
    <string name="days_friday_display">Friday</string>
    <string name="days_saturday">토요일</string>
    <string name="days_saturday_sentence">토요일이에요</string>
    <string name="days_saturday_display">Saturday</string>
    <string name="days_sunday">일요일</string>
    <string name="days_sunday_sentence">일요일이에요</string>
    <string name="days_sunday_display">Sunday</string>
    <string name="days_answer_message_correct"> This was the correct answer. </string>
    <string name="days_answer_message_incorrect"> This was not the correct answer.\n %1$s\n The correct answer was:\n %2$s\n </string>
    <string name="days_question_correct"> %1$d out of %2$d questions correctly answered. </string>
    <string name="sino_label">Sino</string>
    <string name="native_label">Native</string>
    <string name="numbers_button_label">Numbers</string>
    <string name="numbers_1">1</string>
    <string name="numbers_2">2</string>
    <string name="numbers_3">3</string>
    <string name="numbers_4">4</string>
    <string name="numbers_5">5</string>
    <string name="numbers_6">6</string>
    <string name="numbers_7">7</string>
    <string name="numbers_8">8</string>
    <string name="numbers_9">9</string>
    <string name="numbers_10">10</string>
    <string name="numbers_1_sino">일</string>
    <string name="numbers_2_sino">이</string>
    <string name="numbers_3_sino">삼</string>
    <string name="numbers_4_sino">사</string>
    <string name="numbers_5_sino">오</string>
    <string name="numbers_6_sino">육</string>
    <string name="numbers_7_sino">칠</string>
    <string name="numbers_8_sino">팔</string>
    <string name="numbers_9_sino">구</string>
    <string name="numbers_10_sino">십</string>
    <string name="numbers_1_native">하나</string>
    <string name="numbers_2_native">둘</string>
    <string name="numbers_3_native">셋</string>
    <string name="numbers_4_native">넷</string>
    <string name="numbers_5_native">다섯</string>
    <string name="numbers_6_native">여섯</string>
    <string name="numbers_7_native">일곱</string>
    <string name="numbers_8_native">여덟</string>
    <string name="numbers_9_native">아홉</string>
    <string name="numbers_10_native">열</string>
    <string name="numbers_answer_message_correct"> This was the correct answer. </string>
    <string name="numbers_answer_message_incorrect"> This was not the correct answer.\n %1$s\n The correct answer was:\n %2$s\n </string>
    <string name="numbers_question_correct"> %1$d out of %2$d questions correctly answered. </string>

</resources>